# kernel_google-modules_amplifiers-zumapro

Documentation/ABI/testing/: sysfs-devices-platform-audiometrics
audiometrics/: BUILD.bazel  audiometrics.c
audiometrics/uapi/: audiometrics_api.h
cs35l41/: BUILD.bazel  cs35l41-i2c.c  cs35l41-spi.c  cs35l41.c  wm_adsp.c
cs35l45/: BUILD.bazel  Makefile  cs35l45-i2c.c  cs35l45-spi.c  cs35l45.c
cs35l45/include/sound/: cs35l45.h
cs40l25/: BUILD.bazel  cs40l2x.c  snd-soc-codec-cs40l2x.c
cs40l26/: BUILD.bazel  Makefile  cl_dsp-debugfs.c  cl_dsp.c  cl_dsp.h  cs40l26-codec.c  cs40l26-debugfs.c  cs40l26-i2c.c  cs40l26-spi.c  cs40l26-sysfs.c  cs40l26-tables.c  cs40l26.c  cs40l26.h
drv2624/: BUILD.bazel
snd_soc_wm_adsp/: BUILD.bazel  wm_adsp.c
tas256x/: BUILD.bazel
tas256x/physical_layer/src/: tas256x.c
tas25xx/: BUILD.bazel
tas25xx/inc/: tas25xx-logic.h  tas25xx-regbin-parser.h  tas25xx-regmap.h  tas25xx.h
tas25xx/src/: tas25xx-codec.c  tas25xx-logic.c  tas25xx-regbin-parser.c  tas25xx-regmap.c  tas25xx.c
