# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "cs35l41.slider",
    outs = [
        "snd-soc-cs35l41.ko",
        "snd-soc-cs35l41-i2c.ko",
        "snd-soc-cs35l41-spi.ko",
        "snd-soc-wm-adsp.ko",
    ],
    kernel_build = "//gs/google-modules/soc-modules:slider",
    visibility = [
        "//gs/google-modules/soc-modules:__pkg__",
    ],
)
