# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "cs35l45",
    srcs = glob([
        "**/*.c",
        "**/*.h",
    ]) + [
        "//private/google-modules/amplifiers/snd_soc_wm_adsp:headers",
    ],
    outs = [
        "snd-soc-cs35l45.ko",
        "snd-soc-cs35l45-i2c.ko",
        "snd-soc-cs35l45-spi.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/amplifiers/snd_soc_wm_adsp:snd-soc-wm-adsp",
    ],
)
