# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "cs40l26.cloudripper",
    outs = [
        "cl_dsp.ko",
        "input-cs40l26-i2c.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:cloudripper",
    visibility = [
        "//private/google-modules/soc/gs:__pkg__",
    ],
)
